# squareball

./: .gitignore  .travis.yml  .yatr.yml  Doxyfile.in  LICENSE  Makefile.am  README.md  configure.ac  squareball.m4  squareball.pc.in  squareball.spec.in
.travis/: test-run.sh
.travis/targets/: distcheck.sh  docs.sh
build-aux/: clang-analyzer.sh  travis-build.sh  travis-deploy.sh
doc/: 00_index.md
examples/: config.ini  hello_configparser.c  hello_custom_error_type.c  hello_dir_create.c  hello_file_read.c  hello_file_write.c  hello_shell.c  hello_slist.c  hello_string.c  hello_trie.c
src/: mem.c  sb-compat.c  sb-configparser.c  sb-error.c  sb-file.c  sb-mem.c  sb-parsererror.c  sb-shell.c  sb-slist.c  sb-stdin.c  sb-strerror.c  sb-strfuncs.c  sb-string.c  sb-trie.c  sb-utf8.c  slist.c  squareball.h  strings.c  trie.c
src/squareball/: sb-compat.h  sb-configparser-private.h  sb-configparser.h  sb-error-private.h  sb-error.h  sb-file.h  sb-mem.h  sb-parsererror.h  sb-shell.h  sb-slist-private.h  sb-slist.h  sb-stdin.h  sb-strerror.h  sb-strfuncs.h  sb-string-private.h  sb-string.h  sb-trie-private.h  sb-trie.h  sb-utf8.h
tests/: check_configparser.c  check_error.c  check_parsererror.c  check_shell.c  check_slist.c  check_stdin.c  check_strerror.c  check_strfuncs.c  check_string.c  check_strings.c  check_trie.c  check_utf8  check_utf8.c
